@@ -1,6 +1,12 @@
 0.2-5	(under development)
     *	fix bug in dbUnloadDriver() returning NULL instead of FALSE
 
+    *	added block argument to fetch() currently defaulting to 2048
+	which controls the fetch size.
+	Note that 0.2-4 has set this to the stride which was much too
+	big for some databases therefore it is now configurable.
+	(issue #10)
+
 
 0.2-4	2014-06-26
     *	set fetch size to match the capacity for better performance
